--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: 2.2.1
   cached_network_image: ^3.4.1
+
 
   cupertino_icons: ^1.0.8
 
